[gd_scene load_steps=3 format=2]

[ext_resource path="res://Utilities/UI/Options/Dropdown.tscn" type="PackedScene" id=1]
[ext_resource path="res://Utilities/UI/Options/NavTabs.gd" type="Script" id=2]

[node name="NavTabs" type="HBoxContainer"]
margin_top = 30.0
margin_right = 924.0
margin_bottom = 56.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="."]
margin_right = 8.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.01

[node name="Tabs" type="Tabs" parent="."]
margin_left = 12.0
margin_right = 854.0
margin_bottom = 26.0
size_flags_horizontal = 3
tab_close_display_policy = 1

[node name="Control" type="Control" parent="."]
margin_left = 858.0
margin_right = 866.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.01

[node name="Dropdown" parent="." instance=ExtResource( 1 )]
margin_left = 870.0
margin_right = 923.0
margin_bottom = 26.0
toggle_mode = false

[connection signal="reposition_active_tab_request" from="Tabs" to="." method="_on_Tabs_reposition_active_tab_request"]
[connection signal="tab_changed" from="Tabs" to="." method="_on_Tabs_tab_changed"]
[connection signal="tab_close" from="Tabs" to="." method="_on_Tabs_tab_close"]
[connection signal="item_selected" from="Dropdown" to="." method="_on_Dropdown_item_selected"]
